# honker

./: .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  ROADMAP.md  demo.py  pyproject.toml  test_integration.py
.github/workflows/: ci.yml  release-crates.yml
bench/: README.md  ext_bench.py  honker_bench.py  joblite_bench.py  real_bench.py  stream_bench.py  wake_latency_bench.py
honker-core/: Cargo.toml  README.md
honker-core/src/: cron.rs  honker_ops.rs  lib.rs
honker-extension/: Cargo.toml  README.md
honker-extension/src/: lib.rs
honker/src/: lib.rs
joblite/: joblite.py
joblite_django/: __init__.py  views.py
joblite_django/management/commands/: joblite_worker.py
joblite_flask/: __init__.py
litenotify/: Cargo.toml
litenotify-core/: Cargo.toml
litenotify-core/src/: cron.rs  joblite_ops.rs  lib.rs
litenotify-extension/: Cargo.toml
litenotify-extension/src/: lib.rs
litenotify-node/: Cargo.toml  index.d.ts  package.json
litenotify-node/src/: lib.rs
litenotify-node/test/: basic.js  cross_lang.js
litenotify/src/: lib.rs
scripts/: proof_data_version.py
tests/: conftest.py  test_crash_recovery.py  test_cross_process_wake_latency.py  test_extension_interop.py  test_fault_injection.py  test_joblite.py  test_joblite_django.py  test_joblite_fastapi.py  test_joblite_flask.py  test_litenotify.py  test_multiprocess.py  test_outbox.py  test_performance_floors.py  test_rate_limit.py  test_resource_bounds.py  test_scheduler.py  test_scheduler_boundaries.py  test_schema_migration.py  test_soak.py  test_stream.py  test_task_expiration.py  test_task_locking.py  test_task_results.py  test_worker_task_options.py
