[package]
name = "litenotify-extension"
version = "0.1.0"
edition = "2024"

# Output file is `liblitenotify_ext.dylib` / `.so`. Users load with:
#     SELECT load_extension('/path/to/liblitenotify_ext');
# The crate name differs from the PyO3 `litenotify` cdylib because both
# would otherwise try to write `target/release/liblitenotify.dylib` and
# clobber each other.
[lib]
name = "litenotify_ext"
crate-type = ["cdylib"]

[dependencies]
litenotify-core = { path = "../litenotify-core" }
# "loadable_extension" feature makes rusqlite usable from inside a
# sqlite3_extension_init entry point.
rusqlite = { version = "0.39.0", features = ["functions", "hooks", "loadable_extension"] }
