[package]
name = "litenotify-node"
version = "0.1.0"
edition = "2024"

[lib]
name = "litenotify_node"
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3.2", features = ["async", "serde-json", "tokio_rt"] }
napi-derive = "3.2"
parking_lot = "0.12.5"
rusqlite = { version = "0.39.0", features = ["functions", "hooks"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["rt", "rt-multi-thread"] }

[build-dependencies]
napi-build = "2.2"

[profile.release]
lto = true
